# pyrds

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: api_payloads.md  overrides.md  run_api.md  stress_payloads.md
examples/api_payloads/: README.md  backprice_full_qml.json  backtest_full_qml.json  create_working_dir.json  generic_existing_set_ids.json  generic_full_qml.json  generic_hybrid.json  generic_option_ny_mtm.json  generic_ot_id.json  generic_sne_mtm_custom.json  parse_result_all_price.json  parse_result_file_calibration.json  parse_result_file_deltair.json  parse_result_file_duration.json  parse_result_file_func_duration.json  parse_result_file_price.json  parse_result_file_vegair.json  parse_result_inline_price.json  qlib_reg_validator.json  stress_full_qml.json
examples/mock_pricing_workflow/: README.md  mock_runtime.py  run_mock_workflows.py
pyrds/: __init__.py  logger.py  models.py
pyrds/api/: dependencies.py  logging.py  main.py  run.py  schemas.py  static_loader.py  working_dir.py
pyrds/domain/: __init__.py  exceptions.py  models.py  override_models.py  ps_request.py  stress_models.py
pyrds/sdk/: __init__.py  client.py
tests/: conftest.py
tests/api/: test_api_error_handling.py  test_dependencies.py  test_results_routes.py
tests/e2e/: test_real_ot_pricing.py  test_real_set_roundtrip.py
tests/integration/: test_static_qml_fixtures.py
tests/unit/: test_backtester.py  test_base_api.py  test_base_runner_errors.py  test_base_runner_logging.py  test_imports.py  test_override_market_data_add.py  test_qml_handler.py  (+6 more)
(+68 files in other folders)
