[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrds"
version = "0.1.0"
description = "Python SDK and minimal FastAPI surface for pricing workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "lxml>=5.0.0",
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyrds*"]
